import { WIKI_FOLDER } from "@rpgtools/common/src/type-constants.js";
import { WIKI_RW } from "@rpgtools/common/src/permission-constants.js";
import { container } from "../../../../src/di/inversify.js";
import { INJECTABLE_TYPES } from "../../../../src/di/injectable-types.js";
import {CREATE_FOLDER, DELETE_FOLDER, RENAME_FOLDER} from "@rpgtools/common/src/gql-mutations.js";
import {AuthorizationService} from "../../../../src/services/authorization-service.js";
import {WikiPageService} from "../../../../src/services/wiki-page-service.js";
import {DbEngine} from "../../../../src/types.js";
import {TEST_INJECTABLE_TYPES} from "../../injectable-types.js";
import {DefaultTestingContext} from "../../default-testing-context.js";

process.env.TEST_SUITE = "folder-mutations-test";

describe("folder-mutations", () => {

	const dbEngine = container.get<DbEngine>(INJECTABLE_TYPES.DbEngine);
	const testingContext = container.get<DefaultTestingContext>(TEST_INJECTABLE_TYPES.DefaultTestingContext);

	const authorizationService = container.get<AuthorizationService>(
		INJECTABLE_TYPES.AuthorizationService
	);
	const wikiPageService = container.get<WikiPageService>(INJECTABLE_TYPES.WikiPageService);

	describe("with tester logged in and world created", () => {
		beforeEach(async () => {
			await testingContext.reset();
		});

		test("create folder", async () => {
			const result = await testingContext.server.executeGraphQLQuery({
				query: CREATE_FOLDER,
				variables: {
					name: "new folder",
					parentFolderId: testingContext.world.rootFolder.toString(),
				},
			});
			expect(result).toMatchSnapshot({
				data: {
					createFolder: {
						_id: expect.any(String),
						children: expect.arrayContaining([
							expect.objectContaining({
								_id: expect.any(String),
								name: expect.any(String)
							})
						])
					},
				},
			});
		});

		test("rename folder", async () => {
			const result = await testingContext.server.executeGraphQLQuery({
				query: RENAME_FOLDER,
				variables: {
					name: "new folder",
					folderId: testingContext.world.rootFolder.toString(),
				},
			});
			expect(result).toMatchSnapshot({
				data: {
					renameFolder: {
						_id: expect.any(String),
					},
				},
			});
		});

		test("delete folder", async () => {
			const result = await testingContext.server.executeGraphQLQuery({
				query: DELETE_FOLDER,
				variables: { folderId: testingContext.newFolder._id.toString() },
			});
			expect(result).toMatchSnapshot({
				data:{
					deleteFolder: expect.objectContaining({
						_id: expect.any(String),
						children: expect.arrayContaining([
							expect.objectContaining({
								_id: expect.any(String),
								name: expect.any(String)
							}),
						])
					}),
				},
			});
		});

		test("delete root folder", async () => {
			const result = await testingContext.server.executeGraphQLQuery({
				query: DELETE_FOLDER,
				variables: { folderId: testingContext.world.rootFolder.toString() },
			});
			expect(result).toMatchSnapshot();
		});

		describe("with unauthenticated user", () => {
			beforeEach(async () => {
				testingContext.mockSessionContextFactory.useAnonUser();
			});

			test("create folder permission denied", async () => {
				const result = await testingContext.server.executeGraphQLQuery({
					query: CREATE_FOLDER,
					variables: {
						name: "new folder",
						parentFolderId: testingContext.world.rootFolder.toString(),
					},
				});
				expect(result).toMatchSnapshot();
			});

			test("rename folder permission denied", async () => {
				const result = await testingContext.server.executeGraphQLQuery({
					query: RENAME_FOLDER,
					variables: {
						name: "new folder",
						folderId: testingContext.world.rootFolder.toString(),
					},
				});
				expect(result).toMatchSnapshot();
			});

			test("delete folder permission denied", async () => {
				const result = await testingContext.server.executeGraphQLQuery({
					query: DELETE_FOLDER,
					variables: { folderId: testingContext.newFolder._id.toString() },
				});
				expect(result).toMatchSnapshot({
					errors: [
						{
							message: expect.any(String),
						},
					],
				});
			});
		});

		describe("as other user", () => {
			beforeEach(async () => {
				await testingContext.reset();
				testingContext.mockSessionContextFactory.setCurrentUser(testingContext.tester2);
				const databaseContext = await dbEngine.createDatabaseContext();
				await wikiPageService.createWiki(testingContext.tester1SecurityContext, "new page", testingContext.newFolder._id, databaseContext);
				await authorizationService.grantUserPermission(
					testingContext.tester1SecurityContext,
					WIKI_RW,
					testingContext.newFolder._id,
					WIKI_FOLDER,
					testingContext.tester2._id,
					databaseContext
				);
				testingContext.mockSessionContextFactory.setCurrentUser(testingContext.tester2);
			});

			test("no permission to child", async () => {
				const result = await testingContext.server.executeGraphQLQuery({
					query: DELETE_FOLDER,
					variables: { folderId: testingContext.newFolder._id.toString() },
				});
				expect(result).toMatchSnapshot({
					errors: [
						{
							message: expect.any(String),
						},
					],
				});
			});
		});
	});
});
