// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`folder-mutations > with tester logged in and world created > delete root folder 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "deleteFolder",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`folder-mutations > with tester logged in and world created > with unauthenticated user > create folder permission denied 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "createFolder",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`folder-mutations > with tester logged in and world created > with unauthenticated user > rename folder permission denied 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Cannot read properties of undefined (reading 'openTransaction')",
          "path": [
            "renameFolder",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`folder-mutations with tester logged in and world created as other user no permission to child 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": Any<String>,
      "path": [
        "deleteFolder",
      ],
    },
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created create folder 1`] = `
{
  "data": {
    "createFolder": {
      "_id": Any<String>,
      "children": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created delete folder 1`] = `
{
  "data": {
    "deleteFolder": ObjectContaining {
      "_id": Any<String>,
      "children": ArrayContaining [
        ObjectContaining {
          "_id": Any<String>,
          "name": Any<String>,
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created delete root folder 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You cannot delete the root folder of a world],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created rename folder 1`] = `
{
  "data": {
    "renameFolder": {
      "_id": Any<String>,
      "name": "new folder",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created with unauthenticated user create folder permission denied 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You do not have permission for this folder],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created with unauthenticated user delete folder permission denied 1`] = `
{
  "data": null,
  "errors": [
    {
      "extensions": {
        "code": "INTERNAL_SERVER_ERROR",
      },
      "locations": [
        {
          "column": 3,
          "line": 2,
        },
      ],
      "message": Any<String>,
      "path": [
        "deleteFolder",
      ],
    },
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`folder-mutations with tester logged in and world created with unauthenticated user rename folder permission denied 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: You do not have permission for this folder],
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
